corpus/kernel/6.17/networking/index.md
---
collection: kernel
version: "6.17"
title: "Networking"
source_url: https://www.kernel.org/doc/html/v6.17/networking/index.html
fetched_at: 2026-09-16T16:20:50+00:00
---
English

- [Chinese (Simplified)](../translations/zh_CN/networking/index.md)

# Networking

Refer to [Networking subsystem (netdev)](../process/maintainer-netdev.md#netdev-faq) for a guide on netdev development process specifics.

Contents:

- [AF_XDP](af_xdp.md)
  - [Overview](af_xdp.md#overview)
  - [Concepts](af_xdp.md#concepts)
  - [Libbpf](af_xdp.md#libbpf)
  - [XSKMAP / BPF_MAP_TYPE_XSKMAP](af_xdp.md#xskmap-bpf-map-type-xskmap)
  - [Configuration Flags and Socket Options](af_xdp.md#configuration-flags-and-socket-options)
  - [Multi-Buffer Support](af_xdp.md#multi-buffer-support)
  - [Sample application](af_xdp.md#sample-application)
  - [FAQ](af_xdp.md#faq)
  - [Credits](af_xdp.md#credits)
- [Bare UDP Tunnelling Module Documentation](bareudp.md)
  - [Special Handling](bareudp.md#special-handling)
  - [Usage](bareudp.md#usage)
- [batman-adv](batman-adv.md)
  - [Configuration](batman-adv.md#configuration)
  - [Usage](batman-adv.md#usage)
  - [Logging/Debugging](batman-adv.md#logging-debugging)
  - [batctl](batman-adv.md#batctl)
  - [Contact](batman-adv.md#contact)
- [SocketCAN - Controller Area Network](can.md)
  - [Overview / What is SocketCAN](can.md#overview-what-is-socketcan)
  - [Motivation / Why Using the Socket API](can.md#motivation-why-using-the-socket-api)
  - [SocketCAN Concept](can.md#socketcan-concept)
  - [How to use SocketCAN](can.md#how-to-use-socketcan)
  - [SocketCAN Core Module](can.md#socketcan-core-module)
  - [CAN Network Drivers](can.md#can-network-drivers)
  - [SocketCAN Resources](can.md#socketcan-resources)
  - [Credits](can.md#credits)
- [The UCAN Protocol](can_ucan_protocol.md)
  - [USB Endpoints](can_ucan_protocol.md#usb-endpoints)
  - [CONTROL Messages](can_ucan_protocol.md#control-messages)
  - [IN Message Format](can_ucan_protocol.md#in-message-format)
  - [OUT Message Format](can_ucan_protocol.md#out-message-format)
  - [CAN Error Handling](can_ucan_protocol.md#can-error-handling)
  - [Example Conversation](can_ucan_protocol.md#example-conversation)
- [Hardware Device Drivers](device_drivers/index.md)
  - [Asynchronous Transfer Mode (ATM) Device Drivers](device_drivers/atm/index.md)
  - [Controller Area Network (CAN) Device Drivers](device_drivers/can/index.md)
  - [Cellular Modem Device Drivers](device_drivers/cellular/index.md)
  - [Ethernet Device Drivers](device_drivers/ethernet/index.md)
  - [Fiber Distributed Data Interface (FDDI) Device Drivers](device_drivers/fddi/index.md)
  - [Amateur Radio Device Drivers](device_drivers/hamradio/index.md)
  - [Wi-Fi Device Drivers](device_drivers/wifi/index.md)
  - [WWAN Device Drivers](device_drivers/wwan/index.md)
- [Networking Diagnostics](diagnostic/index.md)
  - [Diagnostic Concept for Investigating Twisted Pair Ethernet Variants at OSI Layer 1](diagnostic/twisted_pair_layer1_diagnostics.md)
- [Distributed Switch Architecture](dsa/index.md)
  - [Architecture](dsa/dsa.md)
  - [Broadcom RoboSwitch Ethernet switch driver](dsa/b53.md)
  - [Broadcom Starfighter 2 Ethernet switch driver](dsa/bcm_sf2.md)
  - [LAN9303 Ethernet switch driver](dsa/lan9303.md)
  - [NXP SJA1105 switch driver](dsa/sja1105.md)
  - [DSA switch configuration from userspace](dsa/configuration.md)
- [Linux Devlink Documentation](devlink/index.md)
  - [Locking](devlink/index.md#locking)
  - [Nested instances](devlink/index.md#nested-instances)
  - [Interface documentation](devlink/index.md#interface-documentation)
  - [Driver-specific documentation](devlink/index.md#driver-specific-documentation)
- [CAIF](caif/index.md)
  - [Linux CAIF](caif/linux_caif.md)
  - [Using Linux CAIF](caif/caif.md)
- [Netlink interface for ethtool](ethtool-netlink.md)
  - [Basic information](ethtool-netlink.md#basic-information)
  - [Conventions](ethtool-netlink.md#conventions)
  - [Request header](ethtool-netlink.md#request-header)
  - [Bit sets](ethtool-netlink.md#bit-sets)
  - [List of message types](ethtool-netlink.md#list-of-message-types)
  - [STRSET_GET](ethtool-netlink.md#strset-get)
  - [LINKINFO_GET](ethtool-netlink.md#linkinfo-get)
  - [LINKINFO_SET](ethtool-netlink.md#linkinfo-set)
  - [LINKMODES_GET](ethtool-netlink.md#linkmodes-get)
  - [LINKMODES_SET](ethtool-netlink.md#linkmodes-set)
  - [LINKSTATE_GET](ethtool-netlink.md#linkstate-get)
  - [DEBUG_GET](ethtool-netlink.md#debug-get)
  - [DEBUG_SET](ethtool-netlink.md#debug-set)
  - [WOL_GET](ethtool-netlink.md#wol-get)
  - [WOL_SET](ethtool-netlink.md#wol-set)
  - [FEATURES_GET](ethtool-netlink.md#features-get)
  - [FEATURES_SET](ethtool-netlink.md#features-set)
  - [PRIVFLAGS_GET](ethtool-netlink.md#privflags-get)
  - [PRIVFLAGS_SET](ethtool-netlink.md#privflags-set)
  - [RINGS_GET](ethtool-netlink.md#rings-get)
  - [RINGS_SET](ethtool-netlink.md#rings-set)
  - [CHANNELS_GET](ethtool-netlink.md#channels-get)
  - [CHANNELS_SET](ethtool-netlink.md#channels-set)
  - [COALESCE_GET](ethtool-netlink.md#coalesce-get)
  - [COALESCE_SET](ethtool-netlink.md#coalesce-set)
  - [PAUSE_GET](ethtool-netlink.md#pause-get)
  - [PAUSE_SET](ethtool-netlink.md#pause-set)
  - [EEE_GET](ethtool-netlink.md#eee-get)
  - [EEE_SET](ethtool-netlink.md#eee-set)
  - [TSINFO_GET](ethtool-netlink.md#tsinfo-get)
  - [CABLE_TEST](ethtool-netlink.md#cable-test)
  - [CABLE_TEST TDR](ethtool-netlink.md#cable-test-tdr)
  - [TUNNEL_INFO](ethtool-netlink.md#tunnel-info)
  - [FEC_GET](ethtool-netlink.md#fec-get)
  - [FEC_SET](ethtool-netlink.md#fec-set)
  - [MODULE_EEPROM_GET](ethtool-netlink.md#module-eeprom-get)
  - [STATS_GET](ethtool-netlink.md#stats-get)
  - [PHC_VCLOCKS_GET](ethtool-netlink.md#phc-vclocks-get)
  - [MODULE_GET](ethtool-netlink.md#module-get)
  - [MODULE_SET](ethtool-netlink.md#module-set)
  - [PSE_GET](ethtool-netlink.md#pse-get)
  - [PSE_SET](ethtool-netlink.md#pse-set)
  - [PSE_NTF](ethtool-netlink.md#pse-ntf)
  - [RSS_GET](ethtool-netlink.md#rss-get)
  - [RSS_SET](ethtool-netlink.md#rss-set)
  - [RSS_CREATE_ACT](ethtool-netlink.md#rss-create-act)
  - [RSS_DELETE_ACT](ethtool-netlink.md#rss-delete-act)
  - [PLCA_GET_CFG](ethtool-netlink.md#plca-get-cfg)
  - [PLCA_SET_CFG](ethtool-netlink.md#plca-set-cfg)
  - [PLCA_GET_STATUS](ethtool-netlink.md#plca-get-status)
  - [MM_GET](ethtool-netlink.md#mm-get)
  - [MM_SET](ethtool-netlink.md#mm-set)
  - [MODULE_FW_FLASH_ACT](ethtool-netlink.md#module-fw-flash-act)
  - [PHY_GET](ethtool-netlink.md#phy-get)
  - [TSCONFIG_GET](ethtool-netlink.md#tsconfig-get)
  - [TSCONFIG_SET](ethtool-netlink.md#tsconfig-set)
  - [Request translation](ethtool-netlink.md#request-translation)
- [IEEE 802.15.4 Developer’s Guide](ieee802154.md)
  - [Introduction](ieee802154.md#introduction)
  - [Socket API](ieee802154.md#socket-api)
  - [6LoWPAN Linux implementation](ieee802154.md#lowpan-linux-implementation)
  - [Drivers](ieee802154.md#drivers)
  - [Device drivers API](ieee802154.md#device-drivers-api)
- [ISO 15765-2 (ISO-TP)](iso15765-2.md)
  - [Overview](iso15765-2.md#overview)
  - [How to Use ISO-TP](iso15765-2.md#how-to-use-iso-tp)
  - [Examples](iso15765-2.md#examples)
- [J1939 Documentation](j1939.md)
  - [Overview / What Is J1939](j1939.md#overview-what-is-j1939)
  - [Motivation](j1939.md#motivation)
  - [J1939 concepts](j1939.md#j1939-concepts)
  - [How to Use J1939](j1939.md#how-to-use-j1939)
- [Linux Networking and Network Devices APIs](kapi.md)
  - [Linux Networking](kapi.md#linux-networking)
  - [Network device support](kapi.md#network-device-support)
- [MSG_ZEROCOPY](msg_zerocopy.md)
  - [Intro](msg_zerocopy.md#intro)
  - [Interface](msg_zerocopy.md#interface)
  - [Implementation](msg_zerocopy.md#implementation)
  - [Testing](msg_zerocopy.md#testing)
- [FAILOVER](failover.md)
  - [Overview](failover.md#overview)
- [Net DIM - Generic Network Dynamic Interrupt Moderation](net_dim.md)
  - [Assumptions](net_dim.md#assumptions)
  - [Introduction](net_dim.md#introduction)
  - [Net DIM Algorithm](net_dim.md#net-dim-algorithm)
  - [Registering a Network Device to DIM](net_dim.md#registering-a-network-device-to-dim)
  - [Example](net_dim.md#example)
  - [Tuning DIM](net_dim.md#tuning-dim)
  - [Dynamic Interrupt Moderation (DIM) library API](net_dim.md#dynamic-interrupt-moderation-dim-library-api)
- [NET_FAILOVER](net_failover.md)
  - [Overview](net_failover.md#overview)
  - [virtio-net accelerated datapath: STANDBY mode](net_failover.md#virtio-net-accelerated-datapath-standby-mode)
  - [Live Migration of a VM with SR-IOV VF & virtio-net in STANDBY mode](net_failover.md#live-migration-of-a-vm-with-sr-iov-vf-virtio-net-in-standby-mode)
- [Page Pool API](page_pool.md)
  - [Architecture overview](page_pool.md#architecture-overview)
  - [Monitoring](page_pool.md#monitoring)
  - [API interface](page_pool.md#api-interface)
  - [Coding examples](page_pool.md#coding-examples)
- [PHY Abstraction Layer](phy.md)
  - [Purpose](phy.md#purpose)
  - [The MDIO bus](phy.md#the-mdio-bus)
  - [(RG)MII/electrical interface considerations](phy.md#rg-mii-electrical-interface-considerations)
  - [Connecting to a PHY](phy.md#connecting-to-a-phy)
  - [Letting the PHY Abstraction Layer do Everything](phy.md#letting-the-phy-abstraction-layer-do-everything)
  - [PHY interface modes](phy.md#phy-interface-modes)
  - [Pause frames / flow control](phy.md#pause-frames-flow-control)
  - [Keeping Close Tabs on the PAL](phy.md#keeping-close-tabs-on-the-pal)
  - [Doing it all yourself](phy.md#doing-it-all-yourself)
  - [PHY Device Drivers](phy.md#phy-device-drivers)
  - [Board Fixups](phy.md#board-fixups)
  - [Standards](phy.md#standards)
- [phylink](sfp-phylink.md)
  - [Overview](sfp-phylink.md#overview)
  - [Modes of operation](sfp-phylink.md#modes-of-operation)
  - [Rough guide to converting a network driver to sfp/phylink](sfp-phylink.md#rough-guide-to-converting-a-network-driver-to-sfp-phylink)
- [IP-Aliasing](alias.md)
  - [Alias creation](alias.md#alias-creation)
  - [Alias deletion](alias.md#alias-deletion)
  - [Alias (re-)configuring](alias.md#alias-re-configuring)
  - [Relationship with main device](alias.md#relationship-with-main-device)
- [Ethernet Bridging](bridge.md)
  - [Introduction](bridge.md#introduction)
  - [Bridge kAPI](bridge.md#bridge-kapi)
  - [Bridge uAPI](bridge.md#bridge-uapi)
  - [STP](bridge.md#stp)
  - [VLAN](bridge.md#vlan)
  - [Multicast](bridge.md#multicast)
  - [Switchdev](bridge.md#switchdev)
  - [Netfilter](bridge.md#netfilter)
  - [Other Features](bridge.md#other-features)
  - [FAQ](bridge.md#faq)
  - [Contact Info](bridge.md#contact-info)
  - [External Links](bridge.md#external-links)
- [SNMP counter](snmp_counter.md)
  - [General IPv4 counters](snmp_counter.md#general-ipv4-counters)
  - [ICMP counters](snmp_counter.md#icmp-counters)
  - [General TCP counters](snmp_counter.md#general-tcp-counters)
  - [TCP Fast Open](snmp_counter.md#tcp-fast-open)
  - [TCP Fast Path](snmp_counter.md#tcp-fast-path)
  - [TCP abort](snmp_counter.md#tcp-abort)
  - [TCP Hybrid Slow Start](snmp_counter.md#tcp-hybrid-slow-start)
  - [TCP retransmission and congestion control](snmp_counter.md#tcp-retransmission-and-congestion-control)
  - [DSACK](snmp_counter.md#dsack)
  - [invalid SACK and DSACK](snmp_counter.md#invalid-sack-and-dsack)
  - [SACK shift](snmp_counter.md#sack-shift)
  - [TCP out of order](snmp_counter.md#tcp-out-of-order)
  - [TCP PAWS](snmp_counter.md#tcp-paws)
  - [TCP ACK skip](snmp_counter.md#tcp-ack-skip)
  - [TCP receive window](snmp_counter.md#tcp-receive-window)
  - [Delayed ACK](snmp_counter.md#delayed-ack)
  - [Tail Loss Probe (TLP)](snmp_counter.md#tail-loss-probe-tlp)
  - [TCP Fast Open description](snmp_counter.md#tcp-fast-open-description)
  - [SYN cookies](snmp_counter.md#syn-cookies)
  - [Challenge ACK](snmp_counter.md#challenge-ack)
  - [prune](snmp_counter.md#prune)
  - [examples](snmp_counter.md#examples)
- [Checksum Offloads](checksum-offloads.md)
  - [Introduction](checksum-offloads.md#introduction)
  - [TX Checksum Offload](checksum-offloads.md#tx-checksum-offload)
  - [LCO: Local Checksum Offload](checksum-offloads.md#lco-local-checksum-offload)
  - [RCO: Remote Checksum Offload](checksum-offloads.md#rco-remote-checksum-offload)
- [Segmentation Offloads](segmentation-offloads.md)
  - [Introduction](segmentation-offloads.md#introduction)
  - [TCP Segmentation Offload](segmentation-offloads.md#tcp-segmentation-offload)
  - [UDP Fragmentation Offload](segmentation-offloads.md#udp-fragmentation-offload)
  - [IPIP, SIT, GRE, UDP Tunnel, and Remote Checksum Offloads](segmentation-offloads.md#ipip-sit-gre-udp-tunnel-and-remote-checksum-offloads)
  - [Generic Segmentation Offload](segmentation-offloads.md#generic-segmentation-offload)
  - [Generic Receive Offload](segmentation-offloads.md#generic-receive-offload)
  - [Partial Generic Segmentation Offload](segmentation-offloads.md#partial-generic-segmentation-offload)
  - [SCTP acceleration with GSO](segmentation-offloads.md#sctp-acceleration-with-gso)
- [Scaling in the Linux Networking Stack](scaling.md)
  - [Introduction](scaling.md#introduction)
  - [RSS: Receive Side Scaling](scaling.md#rss-receive-side-scaling)
  - [RPS: Receive Packet Steering](scaling.md#rps-receive-packet-steering)
  - [RFS: Receive Flow Steering](scaling.md#rfs-receive-flow-steering)
  - [Accelerated RFS](scaling.md#accelerated-rfs)
  - [XPS: Transmit Packet Steering](scaling.md#xps-transmit-packet-steering)
  - [Per TX Queue rate limitation](scaling.md#per-tx-queue-rate-limitation)
  - [Further Information](scaling.md#further-information)
- [Kernel TLS](tls.md)
  - [Overview](tls.md#overview)
  - [User interface](tls.md#user-interface)
  - [Statistics](tls.md#statistics)
- [Kernel TLS offload](tls-offload.md)
  - [Kernel TLS operation](tls-offload.md#kernel-tls-operation)
  - [Device configuration](tls-offload.md#device-configuration)
  - [Normal operation](tls-offload.md#normal-operation)
  - [Resync handling](tls-offload.md#resync-handling)
  - [Error handling](tls-offload.md#error-handling)
  - [Performance metrics](tls-offload.md#performance-metrics)
  - [Statistics](tls-offload.md#statistics)
  - [Notable corner cases, exceptions and additional requirements](tls-offload.md#notable-corner-cases-exceptions-and-additional-requirements)
- [In-Kernel TLS Handshake](tls-handshake.md)
  - [Overview](tls-handshake.md#overview)
  - [User handshake agent](tls-handshake.md#user-handshake-agent)
  - [Kernel Handshake API](tls-handshake.md#kernel-handshake-api)
  - [Handshake Completion](tls-handshake.md#handshake-completion)
- [Linux NFC subsystem](nfc.md)
  - [Architecture overview](nfc.md#architecture-overview)
  - [Device Driver Interface](nfc.md#device-driver-interface)
  - [Userspace interface](nfc.md#userspace-interface)
- [Netdev private dataroom for 6lowpan interfaces](6lowpan.md)
- [6pack Protocol](6pack.md)
  - [1. What is 6pack, and what are the advantages to KISS?](6pack.md#what-is-6pack-and-what-are-the-advantages-to-kiss)
  - [2. Who has developed the 6pack protocol?](6pack.md#who-has-developed-the-6pack-protocol)
  - [3. Where can I get the latest version of 6pack for LinuX?](6pack.md#where-can-i-get-the-latest-version-of-6pack-for-linux)
  - [4. Preparing the TNC for 6pack operation](6pack.md#preparing-the-tnc-for-6pack-operation)
  - [5. Building and installing the 6pack driver](6pack.md#building-and-installing-the-6pack-driver)
  - [How to turn on 6pack support:](6pack.md#how-to-turn-on-6pack-support)
  - [6. Known problems](6pack.md#known-problems)
- [ARCnet Hardware](arcnet-hardware.md)
  - [Introduction to ARCnet](arcnet-hardware.md#introduction-to-arcnet)
  - [Cabling ARCnet Networks](arcnet-hardware.md#cabling-arcnet-networks)
  - [Setting the Jumpers](arcnet-hardware.md#setting-the-jumpers)
  - [Unclassified Stuff](arcnet-hardware.md#unclassified-stuff)
  - [Standard Microsystems Corp (SMC)](arcnet-hardware.md#standard-microsystems-corp-smc)
  - [Possibly SMC](arcnet-hardware.md#possibly-smc)
  - [PureData Corp](arcnet-hardware.md#puredata-corp)
  - [CNet Technology Inc. (8-bit cards)](arcnet-hardware.md#cnet-technology-inc-8-bit-cards)
  - [CNet Technology Inc. (16-bit cards)](arcnet-hardware.md#cnet-technology-inc-16-bit-cards)
  - [Lantech](arcnet-hardware.md#lantech)
  - [Acer](arcnet-hardware.md#acer)
  - [Datapoint?](arcnet-hardware.md#datapoint)
  - [Topware](arcnet-hardware.md#topware)
  - [Thomas-Conrad](arcnet-hardware.md#thomas-conrad)
  - [Waterloo Microsystems Inc. ??](arcnet-hardware.md#waterloo-microsystems-inc)
  - [No Name](arcnet-hardware.md#no-name)
  - [Tiara](arcnet-hardware.md#tiara)
  - [Other Cards](arcnet-hardware.md#other-cards)
- [ARCnet](arcnet.md)
  - [Where do I discuss these drivers?](arcnet.md#where-do-i-discuss-these-drivers)
  - [Other Drivers and Info](arcnet.md#other-drivers-and-info)
  - [Installing the Driver](arcnet.md#installing-the-driver)
  - [Loadable Module Support](arcnet.md#loadable-module-support)
  - [Using the Driver](arcnet.md#using-the-driver)
  - [Multiple Cards in One Computer](arcnet.md#multiple-cards-in-one-computer)
  - [How do I get it to work with...?](arcnet.md#how-do-i-get-it-to-work-with)
  - [Using Multiprotocol ARCnet](arcnet.md#using-multiprotocol-arcnet)
  - [It works: what now?](arcnet.md#it-works-what-now)
  - [It doesn’t work: what now?](arcnet.md#it-doesn-t-work-what-now)
  - [I want to send money: what now?](arcnet.md#i-want-to-send-money-what-now)
- [ATM](atm.md)
- [AX.25](ax25.md)
- [Linux Ethernet Bonding Driver HOWTO](bonding.md)
  - [Introduction](bonding.md#introduction)
  - [1. Bonding Driver Installation](bonding.md#bonding-driver-installation)
  - [2. Bonding Driver Options](bonding.md#bonding-driver-options)
  - [3. Configuring Bonding Devices](bonding.md#configuring-bonding-devices)
  - [4 Querying Bonding Configuration](bonding.md#querying-bonding-configuration)
  - [5. Switch Configuration](bonding.md#switch-configuration)
  - [6. 802.1q VLAN Support](bonding.md#q-vlan-support)
  - [7. Link Monitoring](bonding.md#link-monitoring)
  - [8. Potential Sources of Trouble](bonding.md#potential-sources-of-trouble)
  - [9. SNMP agents](bonding.md#snmp-agents)
  - [10. Promiscuous mode](bonding.md#promiscuous-mode)
  - [11. Configuring Bonding for High Availability](bonding.md#configuring-bonding-for-high-availability)
  - [12. Configuring Bonding for Maximum Throughput](bonding.md#configuring-bonding-for-maximum-throughput)
  - [13. Switch Behavior Issues](bonding.md#switch-behavior-issues)
  - [14. Hardware Specific Considerations](bonding.md#hardware-specific-considerations)
  - [15. Frequently Asked Questions](bonding.md#frequently-asked-questions)
  - [16. Resources and Links](bonding.md#resources-and-links)
- [cdc_mbim - Driver for CDC MBIM Mobile Broadband modems](cdc_mbim.md)
  - [Command Line Parameters](cdc_mbim.md#command-line-parameters)
  - [Basic usage](cdc_mbim.md#basic-usage)
  - [MBIM control channel userspace ABI](cdc_mbim.md#mbim-control-channel-userspace-abi)
  - [MBIM data channel userspace ABI](cdc_mbim.md#mbim-data-channel-userspace-abi)
  - [References](cdc_mbim.md#references)
- [DCTCP (DataCenter TCP)](dctcp.md)
- [Device Memory TCP](devmem.md)
  - [Intro](devmem.md#intro)
  - [RX Interface](devmem.md#rx-interface)
  - [TX Interface](devmem.md#tx-interface)
  - [Implementation & Caveats](devmem.md#implementation-caveats)
  - [Testing](devmem.md#testing)
- [DNS Resolver Module](dns_resolver.md)
  - [Overview](dns_resolver.md#overview)
  - [Compilation](dns_resolver.md#compilation)
  - [Setting up](dns_resolver.md#setting-up)
  - [Usage](dns_resolver.md#usage)
  - [Reading DNS Keys from Userspace](dns_resolver.md#reading-dns-keys-from-userspace)
  - [Mechanism](dns_resolver.md#mechanism)
  - [Debugging](dns_resolver.md#debugging)
- [Softnet Driver Issues](driver.md)
  - [Probing guidelines](driver.md#probing-guidelines)
  - [Close/stop guidelines](driver.md#close-stop-guidelines)
  - [Transmit path guidelines](driver.md#transmit-path-guidelines)
- [EQL Driver: Serial IP Load Balancing HOWTO](eql.md)
  - [1. Introduction](eql.md#introduction)
  - [2. Kernel Configuration](eql.md#kernel-configuration)
  - [3. Network Configuration](eql.md#network-configuration)
  - [4. About the Slave Scheduler Algorithm](eql.md#about-the-slave-scheduler-algorithm)
  - [5. Testers’ Reports](eql.md#testers-reports)
- [LC-trie implementation notes](fib_trie.md)
  - [Node types](fib_trie.md#node-types)
  - [A few concepts explained](fib_trie.md#a-few-concepts-explained)
  - [Comments](fib_trie.md#comments)
  - [Locking](fib_trie.md#locking)
  - [Main lookup mechanism](fib_trie.md#main-lookup-mechanism)
- [Linux Socket Filtering aka Berkeley Packet Filter (BPF)](filter.md)
  - [Notice](filter.md#notice)
  - [Introduction](filter.md#introduction)
  - [Structure](filter.md#structure)
  - [Example](filter.md#example)
  - [BPF engine and instruction set](filter.md#bpf-engine-and-instruction-set)
  - [JIT compiler](filter.md#jit-compiler)
  - [BPF kernel internals](filter.md#bpf-kernel-internals)
  - [Testing](filter.md#testing)
  - [Misc](filter.md#misc)
  - [Written by](filter.md#written-by)
- [Generic HDLC layer](generic-hdlc.md)
  - [Board-specific issues](generic-hdlc.md#board-specific-issues)
- [Generic Netlink](generic_netlink.md)
- [Netlink Family Specifications](netlink_spec/index.md)
  - [Family `conntrack` netlink specification](netlink_spec/conntrack.md)
  - [Family `devlink` netlink specification](netlink_spec/devlink.md)
  - [Family `dpll` netlink specification](netlink_spec/dpll.md)
  - [Family `ethtool` netlink specification](netlink_spec/ethtool.md)
  - [Family `fou` netlink specification](netlink_spec/fou.md)
  - [Family `handshake` netlink specification](netlink_spec/handshake.md)
  - [Family `lockd` netlink specification](netlink_spec/lockd.md)
  - [Family `mptcp_pm` netlink specification](netlink_spec/mptcp_pm.md)
  - [Family `net-shaper` netlink specification](netlink_spec/net_shaper.md)
  - [Family `netdev` netlink specification](netlink_spec/netdev.md)
  - [Family `nfsd` netlink specification](netlink_spec/nfsd.md)
  - [Family `nftables` netlink specification](netlink_spec/nftables.md)
  - [Family `nl80211` netlink specification](netlink_spec/nl80211.md)
  - [Family `nlctrl` netlink specification](netlink_spec/nlctrl.md)
  - [Family `ovpn` netlink specification](netlink_spec/ovpn.md)
  - [Family `ovs_datapath` netlink specification](netlink_spec/ovs_datapath.md)
  - [Family `ovs_flow` netlink specification](netlink_spec/ovs_flow.md)
  - [Family `ovs_vport` netlink specification](netlink_spec/ovs_vport.md)
  - [Family `rt-addr` netlink specification](netlink_spec/rt-addr.md)
  - [Family `rt-link` netlink specification](netlink_spec/rt-link.md)
  - [Family `rt-neigh` netlink specification](netlink_spec/rt-neigh.md)
  - [Family `rt-route` netlink specification](netlink_spec/rt-route.md)
  - [Family `rt-rule` netlink specification](netlink_spec/rt-rule.md)
  - [Family `tc` netlink specification](netlink_spec/tc.md)
  - [Family `tcp_metrics` netlink specification](netlink_spec/tcp_metrics.md)
  - [Family `team` netlink specification](netlink_spec/team.md)
- [Generic networking statistics for netlink users](gen_stats.md)
  - [Collecting:](gen_stats.md#collecting)
  - [Export to userspace (Dump):](gen_stats.md#export-to-userspace-dump)
  - [TCA_STATS/TCA_XSTATS backward compatibility:](gen_stats.md#tca-stats-tca-xstats-backward-compatibility)
  - [Locking:](gen_stats.md#locking)
  - [Rate Estimator:](gen_stats.md#rate-estimator)
  - [Authors:](gen_stats.md#authors)
- [The Linux kernel GTP tunneling module](gtp.md)
  - [What is GTP](gtp.md#what-is-gtp)
  - [The Linux GTP tunnelling module](gtp.md#the-linux-gtp-tunnelling-module)
  - [Userspace Programs with Linux Kernel GTP-U support](gtp.md#userspace-programs-with-linux-kernel-gtp-u-support)
  - [Userspace Library / Command Line Utilities](gtp.md#userspace-library-command-line-utilities)
  - [Protocol Versions](gtp.md#protocol-versions)
  - [IPv6](gtp.md#ipv6)
  - [Mailing List](gtp.md#mailing-list)
  - [Issue Tracker](gtp.md#issue-tracker)
  - [History / Acknowledgements](gtp.md#history-acknowledgements)
  - [Architectural Details](gtp.md#architectural-details)
  - [APN vs. Network Device](gtp.md#apn-vs-network-device)
- [Identifier Locator Addressing (ILA)](ila.md)
  - [Introduction](ila.md#introduction)
  - [ILA terminology](ila.md#ila-terminology)
  - [Operation](ila.md#operation)
  - [Transport checksum handling](ila.md#transport-checksum-handling)
  - [Identifier types](ila.md#identifier-types)
  - [Identifier formats](ila.md#identifier-formats)
  - [Configuration](ila.md#configuration)
  - [Some examples](ila.md#some-examples)
- [IOAM6 Sysfs variables](ioam6-sysctl.md)
  - [/proc/sys/net/conf/<iface>/ioam6_\* variables:](ioam6-sysctl.md#proc-sys-net-conf-iface-ioam6-variables)
- [io_uring zero copy Rx](iou-zcrx.md)
  - [Introduction](iou-zcrx.md#introduction)
  - [NIC HW Requirements](iou-zcrx.md#nic-hw-requirements)
  - [Usage](iou-zcrx.md#usage)
  - [Testing](iou-zcrx.md#testing)
- [IP dynamic address hack-port v0.03](ip_dynaddr.md)
- [IPsec](ipsec.md)
- [IP Sysctl](ip-sysctl.md)
  - [/proc/sys/net/ipv4/\* Variables](ip-sysctl.md#proc-sys-net-ipv4-variables)
  - [INET peer storage](ip-sysctl.md#inet-peer-storage)
  - [TCP variables](ip-sysctl.md#tcp-variables)
  - [UDP variables](ip-sysctl.md#udp-variables)
  - [RAW variables](ip-sysctl.md#raw-variables)
  - [CIPSOv4 Variables](ip-sysctl.md#cipsov4-variables)
  - [IP Variables](ip-sysctl.md#ip-variables)
  - [/proc/sys/net/ipv6/\* Variables](ip-sysctl.md#proc-sys-net-ipv6-variables)
  - [`icmp/*`:](ip-sysctl.md#icmp)
  - [/proc/sys/net/bridge/\* Variables:](ip-sysctl.md#proc-sys-net-bridge-variables)
  - [`proc/sys/net/sctp/*` Variables:](ip-sysctl.md#proc-sys-net-sctp-variables)
  - [`/proc/sys/net/core/*`](ip-sysctl.md#proc-sys-net-core)
  - [`/proc/sys/net/unix/*`](ip-sysctl.md#proc-sys-net-unix)
- [IPv6](ipv6.md)
- [IPVLAN Driver HOWTO](ipvlan.md)
  - [1. Introduction:](ipvlan.md#introduction)
  - [2. Building and Installation:](ipvlan.md#building-and-installation)
  - [3. Configuration:](ipvlan.md#configuration)
  - [4. Operating modes:](ipvlan.md#operating-modes)
  - [5. Mode flags:](ipvlan.md#mode-flags)
  - [6. What to choose (macvlan vs. ipvlan)?](ipvlan.md#what-to-choose-macvlan-vs-ipvlan)
  - [6. Example configuration:](ipvlan.md#example-configuration)
- [IPvs-sysctl](ipvs-sysctl.md)
  - [/proc/sys/net/ipv4/vs/\* Variables:](ipvs-sysctl.md#proc-sys-net-ipv4-vs-variables)
- [Kernel Connection Multiplexor](kcm.md)
  - [KCM sockets](kcm.md#kcm-sockets)
  - [Multiplexor](kcm.md#multiplexor)
  - [TCP sockets & Psocks](kcm.md#tcp-sockets-psocks)
  - [Connected mode semantics](kcm.md#connected-mode-semantics)
  - [Socket types](kcm.md#socket-types)
  - [User interface](kcm.md#user-interface)
  - [Use in applications](kcm.md#use-in-applications)
- [L2TP](l2tp.md)
  - [Overview](l2tp.md#overview)
  - [L2TP APIs](l2tp.md#l2tp-apis)
  - [Internal Implementation](l2tp.md#internal-implementation)
  - [Miscellaneous](l2tp.md#miscellaneous)
- [The Linux LAPB Module Interface](lapb-module.md)
  - [Structures](lapb-module.md#structures)
  - [LAPB Initialisation Structure](lapb-module.md#lapb-initialisation-structure)
  - [LAPB Parameter Structure](lapb-module.md#lapb-parameter-structure)
  - [Functions](lapb-module.md#functions)
  - [Callbacks](lapb-module.md#callbacks)
- [How to use packet injection with mac80211](mac80211-injection.md)
- [Management Component Transport Protocol (MCTP)](mctp.md)
  - [Structure: interfaces & networks](mctp.md#structure-interfaces-networks)
  - [Sockets API](mctp.md#sockets-api)
  - [Kernel internals](mctp.md#kernel-internals)
- [MPLS Sysfs variables](mpls-sysctl.md)
  - [/proc/sys/net/mpls/\* Variables:](mpls-sysctl.md#proc-sys-net-mpls-variables)
- [Multipath TCP (MPTCP)](mptcp.md)
  - [Introduction](mptcp.md#introduction)
  - [Use cases](mptcp.md#use-cases)
  - [Concepts](mptcp.md#concepts)
  - [Sockets API](mptcp.md#sockets-api)
  - [Design choices](mptcp.md#design-choices)
- [MPTCP Sysfs variables](mptcp-sysctl.md)
  - [/proc/sys/net/mptcp/\* Variables](mptcp-sysctl.md#proc-sys-net-mptcp-variables)
- [HOWTO for multiqueue network device support](multiqueue.md)
  - [Section 1: Base driver requirements for implementing multiqueue support](multiqueue.md#section-1-base-driver-requirements-for-implementing-multiqueue-support)
  - [Section 2: Qdisc support for multiqueue devices](multiqueue.md#section-2-qdisc-support-for-multiqueue-devices)
  - [Section 3: Brief howto using MULTIQ for multiqueue devices](multiqueue.md#section-3-brief-howto-using-multiq-for-multiqueue-devices)
- [Multi-PF Netdev](multi-pf-netdev.md)
  - [Contents](multi-pf-netdev.md#contents)
  - [Background](multi-pf-netdev.md#background)
  - [Overview](multi-pf-netdev.md#overview)
  - [mlx5 implementation](multi-pf-netdev.md#mlx5-implementation)
  - [Channels distribution](multi-pf-netdev.md#channels-distribution)
  - [Observability](multi-pf-netdev.md#observability)
  - [Steering](multi-pf-netdev.md#steering)
  - [Mutually exclusive features](multi-pf-netdev.md#mutually-exclusive-features)
- [NAPI](napi.md)
  - [Driver API](napi.md#driver-api)
  - [User API](napi.md#user-api)
- [Common Networking Struct Cachelines](net_cachelines/index.md)
  - [inet_connection_sock struct fast path usage breakdown](net_cachelines/inet_connection_sock.md)
  - [inet_sock struct fast path usage breakdown](net_cachelines/inet_sock.md)
  - [net_device struct fast path usage breakdown](net_cachelines/net_device.md)
  - [netns_ipv4 struct fast path usage breakdown](net_cachelines/netns_ipv4_sysctl.md)
  - [netns_ipv4 enum fast path usage breakdown](net_cachelines/snmp.md)
  - [tcp_sock struct fast path usage breakdown](net_cachelines/tcp_sock.md)
- [Netconsole](netconsole.md)
  - [Introduction:](netconsole.md#introduction)
  - [Sender and receiver configuration:](netconsole.md#sender-and-receiver-configuration)
  - [Dynamic reconfiguration:](netconsole.md#dynamic-reconfiguration)
  - [Extended console:](netconsole.md#extended-console)
  - [Miscellaneous notes:](netconsole.md#miscellaneous-notes)
- [Netdev features mess and how to get out from it alive](netdev-features.md)
  - [Part I: Feature sets](netdev-features.md#part-i-feature-sets)
  - [Part II: Controlling enabled features](netdev-features.md#part-ii-controlling-enabled-features)
  - [Part III: Implementation hints](netdev-features.md#part-iii-implementation-hints)
  - [Part IV: Features](netdev-features.md#part-iv-features)
- [Network Devices, the Kernel, and You!](netdevices.md)
  - [Introduction](netdevices.md#introduction)
  - [struct net_device lifetime rules](netdevices.md#struct-net-device-lifetime-rules)
  - [MTU](netdevices.md#mtu)
  - [struct net_device synchronization rules](netdevices.md#struct-net-device-synchronization-rules)
  - [struct napi_struct synchronization rules](netdevices.md#struct-napi-struct-synchronization-rules)
  - [netdev instance lock](netdevices.md#netdev-instance-lock)
  - [NETDEV_INTERNAL symbol namespace](netdevices.md#netdev-internal-symbol-namespace)
- [Netfilter Sysfs variables](netfilter-sysctl.md)
  - [/proc/sys/net/netfilter/\* Variables:](netfilter-sysctl.md#proc-sys-net-netfilter-variables)
- [NETIF Msg Level](netif-msg.md)
  - [History](netif-msg.md#history)
- [Netmem Support for Network Drivers](netmem.md)
  - [Driver RX Requirements](netmem.md#driver-rx-requirements)
  - [Driver TX Requirements](netmem.md#driver-tx-requirements)
- [Resilient Next-hop Groups](nexthop-group-resilient.md)
  - [Algorithm](nexthop-group-resilient.md#algorithm)
  - [Offloading & Driver Feedback](nexthop-group-resilient.md#offloading-driver-feedback)
  - [Netlink UAPI](nexthop-group-resilient.md#netlink-uapi)
  - [Usage](nexthop-group-resilient.md#usage)
  - [Netdevsim](nexthop-group-resilient.md#netdevsim)
- [Netfilter Conntrack Sysfs variables](nf_conntrack-sysctl.md)
  - [/proc/sys/net/netfilter/nf_conntrack_\* Variables:](nf_conntrack-sysctl.md#proc-sys-net-netfilter-nf-conntrack-variables)
- [Netfilter’s flowtable infrastructure](nf_flowtable.md)
  - [Overview](nf_flowtable.md#overview)
  - [Example configuration](nf_flowtable.md#example-configuration)
  - [Layer 2 encapsulation](nf_flowtable.md#layer-2-encapsulation)
  - [Bridge and IP forwarding](nf_flowtable.md#bridge-and-ip-forwarding)
  - [Counters](nf_flowtable.md#counters)
  - [Hardware offload](nf_flowtable.md#hardware-offload)
  - [Limitations](nf_flowtable.md#limitations)
  - [More reading](nf_flowtable.md#more-reading)
- [OPEN Alliance 10BASE-T1x MAC-PHY Serial Interface (TC6) Framework Support](oa-tc6-framework.md)
  - [Introduction](oa-tc6-framework.md#introduction)
  - [Overview](oa-tc6-framework.md#overview)
  - [Protocol Overview](oa-tc6-framework.md#protocol-overview)
  - [Reference](oa-tc6-framework.md#reference)
  - [Hardware Architecture](oa-tc6-framework.md#hardware-architecture)
  - [Software Architecture](oa-tc6-framework.md#software-architecture)
  - [Implementation](oa-tc6-framework.md#implementation)
- [Open vSwitch datapath developer documentation](openvswitch.md)
  - [Flow key compatibility](openvswitch.md#flow-key-compatibility)
  - [Flow key format](openvswitch.md#flow-key-format)
  - [Wildcarded flow key format](openvswitch.md#wildcarded-flow-key-format)
  - [Unique flow identifiers](openvswitch.md#unique-flow-identifiers)
  - [Basic rule for evolving flow keys](openvswitch.md#basic-rule-for-evolving-flow-keys)
  - [Handling malformed packets](openvswitch.md#handling-malformed-packets)
  - [Other rules](openvswitch.md#other-rules)
- [Operational States](operstates.md)
  - [1. Introduction](operstates.md#introduction)
  - [2. Querying from userspace](operstates.md#querying-from-userspace)
  - [3. Kernel driver API](operstates.md#kernel-driver-api)
  - [4. Setting from userspace](operstates.md#setting-from-userspace)
- [Packet MMAP](packet_mmap.md)
  - [Abstract](packet_mmap.md#abstract)
  - [Why use PACKET_MMAP](packet_mmap.md#why-use-packet-mmap)
  - [How to use mmap() to improve capture process](packet_mmap.md#how-to-use-mmap-to-improve-capture-process)
  - [How to use mmap() directly to improve capture process](packet_mmap.md#how-to-use-mmap-directly-to-improve-capture-process)
  - [How to use mmap() directly to improve transmission process](packet_mmap.md#how-to-use-mmap-directly-to-improve-transmission-process)
  - [PACKET_MMAP settings](packet_mmap.md#packet-mmap-settings)
  - [PACKET_MMAP setting constraints](packet_mmap.md#packet-mmap-setting-constraints)
  - [PACKET_MMAP buffer size calculator](packet_mmap.md#packet-mmap-buffer-size-calculator)
  - [What TPACKET versions are available and when to use them?](packet_mmap.md#what-tpacket-versions-are-available-and-when-to-use-them)
  - [AF_PACKET fanout mode](packet_mmap.md#af-packet-fanout-mode)
  - [AF_PACKET TPACKET_V3 example](packet_mmap.md#af-packet-tpacket-v3-example)
  - [PACKET_QDISC_BYPASS](packet_mmap.md#packet-qdisc-bypass)
  - [PACKET_TIMESTAMP](packet_mmap.md#packet-timestamp)
  - [Miscellaneous bits](packet_mmap.md#miscellaneous-bits)
  - [THANKS](packet_mmap.md#thanks)
- [Linux Phonet protocol family](phonet.md)
  - [Introduction](phonet.md#introduction)
  - [Packets format](phonet.md#packets-format)
  - [Link layer](phonet.md#link-layer)
  - [Network layer](phonet.md#network-layer)
  - [Low-level datagram protocol](phonet.md#low-level-datagram-protocol)
  - [Resource subscription](phonet.md#resource-subscription)
  - [Phonet Pipe protocol](phonet.md#phonet-pipe-protocol)
  - [Authors](phonet.md#authors)
- [PHY link topology](phy-link-topology.md)
  - [Overview](phy-link-topology.md#overview)
  - [API](phy-link-topology.md#api)
  - [UAPI](phy-link-topology.md#uapi)
- [HOWTO for the linux packet generator](pktgen.md)
  - [Tuning NIC for max performance](pktgen.md#tuning-nic-for-max-performance)
  - [Kernel threads](pktgen.md#kernel-threads)
  - [Viewing devices](pktgen.md#viewing-devices)
  - [Configuring devices](pktgen.md#configuring-devices)
  - [Sample scripts](pktgen.md#sample-scripts)
  - [Interrupt affinity](pktgen.md#interrupt-affinity)
  - [Enable IPsec](pktgen.md#enable-ipsec)
  - [Disable shared SKB](pktgen.md#disable-shared-skb)
  - [Current commands and configuration options](pktgen.md#current-commands-and-configuration-options)
- [PLIP: The Parallel Line Internet Protocol Device](plip.md)
  - [PLIP Introduction](plip.md#plip-introduction)
  - [PLIP driver details](plip.md#plip-driver-details)
  - [PLIP hardware interconnection](plip.md#plip-hardware-interconnection)
- [PPP Generic Driver and Channel Interface](ppp_generic.md)
  - [PPP channel API](ppp_generic.md#ppp-channel-api)
  - [Buffering and flow control](ppp_generic.md#buffering-and-flow-control)
  - [SMP safety](ppp_generic.md#smp-safety)
  - [Interface to pppd](ppp_generic.md#interface-to-pppd)
- [The proc/net/tcp and proc/net/tcp6 variables](proc_net_tcp.md)
- [Power Sourcing Equipment (PSE) Documentation](pse-pd/index.md)
  - [Power Sourcing Equipment (PSE) in IEEE 802.3 Standard](pse-pd/introduction.md)
  - [PSE Power Interface (PSE PI) Documentation](pse-pd/pse-pi.md)
- [How to use radiotap headers](radiotap-headers.md)
  - [Pointer to the radiotap include file](radiotap-headers.md#pointer-to-the-radiotap-include-file)
  - [Structure of the header](radiotap-headers.md#structure-of-the-header)
  - [Requirements for arguments](radiotap-headers.md#requirements-for-arguments)
  - [Example valid radiotap header](radiotap-headers.md#example-valid-radiotap-header)
  - [Using the Radiotap Parser](radiotap-headers.md#using-the-radiotap-parser)
- [RDS](rds.md)
  - [Overview](rds.md#overview)
  - [RDS Architecture](rds.md#rds-architecture)
  - [Socket Interface](rds.md#socket-interface)
  - [RDMA for RDS](rds.md#rdma-for-rds)
  - [Congestion Notifications](rds.md#congestion-notifications)
  - [RDS Protocol](rds.md#rds-protocol)
  - [RDS Transport Layer](rds.md#rds-transport-layer)
  - [RDS Kernel Structures](rds.md#rds-kernel-structures)
  - [Connection management](rds.md#connection-management)
  - [The send path](rds.md#the-send-path)
  - [The recv path](rds.md#the-recv-path)
  - [Multipath RDS (mprds)](rds.md#multipath-rds-mprds)
- [Linux wireless regulatory documentation](regulatory.md)
  - [Keeping regulatory domains in userspace](regulatory.md#keeping-regulatory-domains-in-userspace)
  - [How to get regulatory domains to the kernel](regulatory.md#how-to-get-regulatory-domains-to-the-kernel)
  - [How to get regulatory domains to the kernel (old CRDA solution)](regulatory.md#how-to-get-regulatory-domains-to-the-kernel-old-crda-solution)
  - [Who asks for regulatory domains?](regulatory.md#who-asks-for-regulatory-domains)
  - [Example code - drivers hinting an alpha2:](regulatory.md#example-code-drivers-hinting-an-alpha2)
  - [Example code - drivers providing a built in regulatory domain:](regulatory.md#example-code-drivers-providing-a-built-in-regulatory-domain)
  - [Statically compiled regulatory database](regulatory.md#statically-compiled-regulatory-database)
- [Network Function Representors](representors.md)
  - [Motivation](representors.md#motivation)
  - [Definitions](representors.md#definitions)
  - [What does a representor do?](representors.md#what-does-a-representor-do)
  - [What functions should have a representor?](representors.md#what-functions-should-have-a-representor)
  - [How are representors created?](representors.md#how-are-representors-created)
  - [How are representors identified?](representors.md#how-are-representors-identified)
  - [How do representors interact with TC rules?](representors.md#how-do-representors-interact-with-tc-rules)
  - [Configuring the representee’s MAC](representors.md#configuring-the-representee-s-mac)
- [RxRPC Network Protocol](rxrpc.md)
  - [Overview](rxrpc.md#overview)
  - [RxRPC Protocol Summary](rxrpc.md#rxrpc-protocol-summary)
  - [AF_RXRPC Driver Model](rxrpc.md#af-rxrpc-driver-model)
  - [Control Messages](rxrpc.md#control-messages)
- [SOCKET OPTIONS](rxrpc.md#socket-options)
- [SECURITY](rxrpc.md#security)
- [EXAMPLE CLIENT USAGE](rxrpc.md#example-client-usage)
  - [Example Server Usage](rxrpc.md#example-server-usage)
  - [AF_RXRPC Kernel Interface](rxrpc.md#af-rxrpc-kernel-interface)
  - [Configurable Parameters](rxrpc.md#configurable-parameters)
  - [API Function Reference](rxrpc.md#api-function-reference)
- [Linux Kernel SCTP](sctp.md)
  - [Caveats](sctp.md#caveats)
- [LSM/SeLinux secid](secid.md)
- [Seg6 Sysfs variables](seg6-sysctl.md)
  - [/proc/sys/net/conf/<iface>/seg6_\* variables:](seg6-sysctl.md#proc-sys-net-conf-iface-seg6-variables)
- [struct sk_buff](skbuff.md)
  - [Basic sk_buff geometry](skbuff.md#basic-sk-buff-geometry)
  - [Shared skbs and skb clones](skbuff.md#shared-skbs-and-skb-clones)
  - [dataref and headerless skbs](skbuff.md#dataref-and-headerless-skbs)
  - [Checksum information](skbuff.md#checksum-information)
- [SMC Sysctl](smc-sysctl.md)
  - [/proc/sys/net/smc/\* Variables](smc-sysctl.md#proc-sys-net-smc-variables)
- [NIC SR-IOV APIs](sriov.md)
  - [Legacy API](sriov.md#legacy-api)
- [Interface statistics](statistics.md)
  - [Overview](statistics.md#overview)
  - [uAPIs](statistics.md#uapis)
  - [struct rtnl_link_stats64](statistics.md#struct-rtnl-link-stats64)
  - [Notes for driver authors](statistics.md#notes-for-driver-authors)
- [Stream Parser (strparser)](strparser.md)
  - [Introduction](strparser.md#introduction)
  - [Interface](strparser.md#interface)
  - [Functions](strparser.md#functions)
  - [Callbacks](strparser.md#callbacks)
  - [Statistics](strparser.md#statistics)
  - [Message assembly limits](strparser.md#message-assembly-limits)
  - [Author](strparser.md#author)
- [Ethernet switch device driver model (switchdev)](switchdev.md)
  - [Include Files](switchdev.md#include-files)
  - [Configuration](switchdev.md#configuration)
  - [Switch Ports](switchdev.md#switch-ports)
  - [L2 Forwarding Offload](switchdev.md#l2-forwarding-offload)
  - [L3 Routing Offload](switchdev.md#l3-routing-offload)
  - [Device driver expected behavior](switchdev.md#device-driver-expected-behavior)
- [Sysfs tagging](sysfs-tagging.md)
- [TC Actions - Environmental Rules](tc-actions-env-rules.md)
- [TC queue based filtering](tc-queue-filters.md)
- [TCP Authentication Option Linux implementation (RFC5925)](tcp_ao.md)
  - [1. Introduction](tcp_ao.md#introduction)
  - [2. In-kernel MKTs database vs database in userspace](tcp_ao.md#in-kernel-mkts-database-vs-database-in-userspace)
  - [3. uAPI](tcp_ao.md#uapi)
  - [4. `setsockopt()` vs `accept()` race](tcp_ao.md#setsockopt-vs-accept-race)
  - [5. Interaction with TCP-MD5](tcp_ao.md#interaction-with-tcp-md5)
  - [6. SNE Linux implementation](tcp_ao.md#sne-linux-implementation)
  - [7. Links](tcp_ao.md#links)
- [Thin-streams and TCP](tcp-thin.md)
  - [References](tcp-thin.md#references)
- [Team](team.md)
- [Timestamping](timestamping.md)
  - [1. Control Interfaces](timestamping.md#control-interfaces)
  - [2 Data Interfaces](timestamping.md#data-interfaces)
  - [3. Hardware Timestamping configuration: ETHTOOL_MSG_TSCONFIG_SET/GET](timestamping.md#hardware-timestamping-configuration-ethtool-msg-tsconfig-set-get)
- [Linux Kernel TIPC](tipc.md)
  - [Introduction](tipc.md#introduction)
  - [Implementation](tipc.md#implementation)
- [Transparent proxy support](tproxy.md)
  - [1. Making non-local sockets work](tproxy.md#making-non-local-sockets-work)
  - [2. Redirecting traffic](tproxy.md#redirecting-traffic)
  - [3. Iptables and nf_tables extensions](tproxy.md#iptables-and-nf-tables-extensions)
  - [4. Application support](tproxy.md#application-support)
- [Universal TUN/TAP device driver](tuntap.md)
  - [1. Description](tuntap.md#description)
  - [2. Configuration](tuntap.md#configuration)
  - [3. Program interface](tuntap.md#program-interface)
  - [Universal TUN/TAP device driver Frequently Asked Question](tuntap.md#universal-tun-tap-device-driver-frequently-asked-question)
- [The UDP-Lite protocol (RFC 3828)](udplite.md)
  - [1. Applications](udplite.md#applications)
  - [2. Programming API](udplite.md#programming-api)
  - [3. Header Files](udplite.md#header-files)
  - [4. Kernel Behaviour with Regards to the Various Socket Options](udplite.md#kernel-behaviour-with-regards-to-the-various-socket-options)
  - [5. UDP-Lite Runtime Statistics and their Meaning](udplite.md#udp-lite-runtime-statistics-and-their-meaning)
  - [6. IPtables](udplite.md#iptables)
  - [7. Maintainer Address](udplite.md#maintainer-address)
- [Virtual Routing and Forwarding (VRF)](vrf.md)
  - [The VRF Device](vrf.md#the-vrf-device)
  - [Using iproute2 for VRFs](vrf.md#using-iproute2-for-vrfs)
- [Virtual eXtensible Local Area Networking documentation](vxlan.md)
- [Linux X.25 Project](x25.md)
- [X.25 Device Driver Interface](x25-iface.md)
  - [Packet Layer to Device Driver](x25-iface.md#packet-layer-to-device-driver)
  - [Device Driver to Packet Layer](x25-iface.md#device-driver-to-packet-layer)
  - [Requirements for the device driver](x25-iface.md#requirements-for-the-device-driver)
- [XFRM device - offloading the IPsec computations](xfrm_device.md)
  - [Overview](xfrm_device.md#overview)
  - [Callbacks to implement](xfrm_device.md#callbacks-to-implement)
  - [Flow](xfrm_device.md#flow)
- [XFRM proc - /proc/net/xfrm_\* files](xfrm_proc.md)
  - [Transformation Statistics](xfrm_proc.md#transformation-statistics)
- [XFRM](xfrm_sync.md)
  - [1) Message Structure](xfrm_sync.md#message-structure)
  - [2) TLVS reflect the different parameters:](xfrm_sync.md#tlvs-reflect-the-different-parameters)
  - [3) Default configurations for the parameters:](xfrm_sync.md#default-configurations-for-the-parameters)
  - [4) Message types](xfrm_sync.md#message-types)
  - [Exceptions to threshold settings](xfrm_sync.md#exceptions-to-threshold-settings)
- [XFRM Syscall](xfrm_sysctl.md)
  - [/proc/sys/net/core/xfrm_\* Variables:](xfrm_sysctl.md#proc-sys-net-core-xfrm-variables)
- [XDP RX Metadata](xdp-rx-metadata.md)
  - [General Design](xdp-rx-metadata.md#general-design)
  - [AF_XDP](xdp-rx-metadata.md#af-xdp)
  - [XDP_PASS](xdp-rx-metadata.md#xdp-pass)
  - [bpf_redirect_map](xdp-rx-metadata.md#bpf-redirect-map)
  - [bpf_tail_call](xdp-rx-metadata.md#bpf-tail-call)
  - [Supported Devices](xdp-rx-metadata.md#supported-devices)
  - [Driver Implementation](xdp-rx-metadata.md#driver-implementation)
  - [Example](xdp-rx-metadata.md#example)
- [AF_XDP TX Metadata](xsk-tx-metadata.md)
  - [General Design](xsk-tx-metadata.md#general-design)
  - [Software TX Checksum](xsk-tx-metadata.md#software-tx-checksum)
  - [Launch Time](xsk-tx-metadata.md#launch-time)
  - [Querying Device Capabilities](xsk-tx-metadata.md#querying-device-capabilities)
  - [Example](xsk-tx-metadata.md#example)
